Functional Cropper and Event Image Cropper is uploading the images from local and storing them in bucket. The url for the images are being used for the event view thumbnail and banner. Still need to fix image upload box with cropper And clear cropper image between uploads.

--- a/less/navStyle.less
+++ b/less/navStyle.less
@@ -22,6 +22,7 @@ body {
 //   position: absolute;
 // }
 .modal {
+  overflow : auto !important;
   .modal-body{
     height : auto;
     overflow : visible;
@@ -30,6 +31,7 @@ body {
     }
   }
 }
+
 
 ul.sidebar .sidebar-list a:hover{
   background-color: #12536e;
